--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="tr">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon"  href="/images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
    
     <meta
